--- a/Song table/indesk2.css
+++ b/Song table/indesk2.css
@@ -10,8 +10,18 @@ table{
     padding: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     position: relative;
-    
 }
+.container{
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    gap: 20px;
+}
+.imgae{
+    border-radius: 30px;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
 th{ 
     border-bottom: 1px solid #888;
     padding: 12px;
@@ -33,8 +43,6 @@ td{
     background-color: rgba(35, 123, 238, 0.617);/*94, 255, 35, 0.426*/
 }
 
-
-
 tr:last-child td{
     border-bottom: none;
 }
@@ -45,7 +53,6 @@ tr:last-child td{
     vertical-align: middle;
     margin-left: 0em;
     margin-right: 2em;
-    
 }
 .part2{
     width: 40px;
