Make changes to the page, add images, text, and update the background.

--- a/Song table/indesk2.css
+++ b/Song table/indesk2.css
@@ -8,7 +8,7 @@ table{
     border-width: 1px 1px;
     border-collapse: collapse;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 5px -5px 10px rgba(0,0,0,0.5);
     position: relative;
 }
 .container{
@@ -17,19 +17,35 @@ table{
     flex-direction: row-reverse;
     gap: 20px;
 }
+.text{
+    /* background-color: rgb(35, 38, 42); */
+    background-color: rgb(35, 48, 62);
+    color:white;
+    border-top: 3px red solid;
+    border-right: 5px green dashed;
+    border-bottom: 4px purple dotted;
+    border-left: 5px orange double;
+    border-radius: 5px;
+    padding-right: 7px;
+    border-style:solid;
+    direction: rtl;
+    /* padding-top: 10px; */
+    padding: 15px;
+}
 .imgae{
     border-radius: 30px;
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5);
+    border-style: groove;
+    border: 0.05px red solid
 }
-
 th{ 
     border-bottom: 1px solid #888;
     padding: 12px;
     text-align: center;
     color: rgb(0, 0, 0);
     font-style: oblique;
-    font-weight: bold;
-    background-color: rgba(187, 42, 255, 0.975);/*25, 248, 151, 0.619*/
+    font-weight: bold;        /*187, 42, 255, 0.975*/
+    background-color: rgba(25, 248, 151, 0.352);/*25, 248, 151, 0.619*/
     font-style: oblique;
     color: rgb(5, 37, 83);
 }
@@ -39,49 +55,50 @@ td{
     text-align: center;
     color: rgb(0, 0, 0);
     font-style: oblique;
-    font-weight: bold;
-    background-color: rgba(35, 123, 238, 0.617);/*94, 255, 35, 0.426*/
+    font-weight: bold;       /*35, 123, 238, 0.617*/
+    background-color: rgba(94, 255, 35, 0.426);/*94, 255, 35, 0.426*/
 }
-
 tr:last-child td{
     border-bottom: none;
 }
-.part1{
+.Image-roundness1{
     width: 40px;
     height: 40px;
-    border-radius: 50px;
+    border-radius: 40px;
     vertical-align: middle;
     margin-left: 0em;
     margin-right: 2em;
 }
-.part2{
+.Image-roundness2{
     width: 40px;
     height: 40px;
     border-radius: 50px;
     vertical-align: middle;
     margin-right: 30px;
 }
-.part3{
+.Image-roundness3{
     width: 40px;
     height: 40px;
     border-radius: 50px;
     vertical-align: middle;
     margin-right: 30px;
 }
-
-
 #fontmargin{
     text-align:center;
 }
-
-
 body{       
-    /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHsLMNR26w_a4NR8Vvr8KRpiPCi2xrn_J6DA&s);
-    background-size: cover; */
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(179, 242, 179);
-    
-    
+    /* background-color: rgba(179, 242, 179); */
+    background-color: #eee;
     
 }    
+.pargragh{
+    /* margin-top: 100px;   */
+    /* margin-left: 100px; */
+    /* margin-right:500px; */
+    padding-top: 100px;
+    padding-left: 150px;
+    box-sizing: border-box;
+
+}
