--- a/Song table/indesk2.css
+++ b/Song table/indesk2.css
@@ -26,10 +26,9 @@ table{
     border-bottom: 4px purple dotted;
     border-left: 5px orange double;
     border-radius: 5px;
-    padding-right: 7px;
     border-style:solid;
     direction: rtl;
-    /* padding-top: 10px; */
+    line-height: 2;
     padding: 15px;
 }
 .imgae{
