--- a/Song table/indesk2.css
+++ b/Song table/indesk2.css
@@ -93,7 +93,7 @@ body{
     /* min-width: 120vw; */
     /* min-height: 100vw; */
     box-sizing: border-box;
-    
+    font-family: "Segoe UI Emoji", sans-serif;
 }    
 .pargragh{
     /* margin-top: 100px;   */
@@ -129,18 +129,100 @@ input{
     margin-left: 4em;
 }
 button{
-    padding: 12px 20px;
+    border: none;
+    padding: 12px 20px;   
     margin: 8px;
     background-color: #e73929;
     color: white;
     border: none;
     cursor: pointer;
     box-shadow: -5px 10px 10px rgba(0, 0, 0, 0.666);
-    /* border: 2px white solid; */
-}
+    border: 2px white solid;
+    cursor: pointer;
+    outline: 0;
+    display: inline-block;
+    
+} 
 button:hover{
     background-color: #ff0000;
     transform: scale(1.05);
     transition: 0.3s ease;
     border: 2px white solid;
 }
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 80px;
+    /* max-width: 300px; */
+    text-align: center;
+    /* font-family: arial; */
+    /* padding: 2em; */
+    background-color: transparent;
+    /* display: flex; */
+    gap: 20%;
+}
+.title{
+    color: grey;
+    font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  /* border: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  vertical-align: middle;
+  outline: none; */
+
+}
+#imageclass{
+    width: 35em;
+    height: 26em;
+    padding: 1em 5em 0em 1em;
+}
+
+.mydiv{
+    border: none;
+    margin: 0;
+    outline: none;
+    padding: 0;
+    background: transparent;
+    object-fit: contain;
+    /* display: inline-block; */
+    vertical-align: middle;
+}
+
+h2{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    
+}
+
+.my_githab:hover {
+    transform: scale(1.2);
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+.my_telegram:hover {
+    transform: scale(1.2);
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+.my_instagram:hover {
+    transform: scale(1.2);
+    display: inline-block;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.10);
+}
+
+.title:hover {
+    color: red;
+    transition:  all 0.70s ease;
+    transform: scale(1.2);
+    text-shadow: 0px 4px 12px rgba(0, 0, 0, 5);  
+}
+
